--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     font-family: 'Poppins', sans-serif;
 }
 
-html{
+html {
     scroll-behavior: smooth;
 }
 
@@ -49,9 +49,20 @@ body {
     justify-content: space-between;
 }
 
+.header-tags ul {
+    display: flex;
+    gap: 50px;
+    list-style: none;
+}
+
 .header-tags a {
     text-decoration: none;
     color: black;
+    font-weight: 500;
+}
+
+a:hover {
+    color: #509E2F;
 }
 
 .header-right {
@@ -60,6 +71,12 @@ body {
     width: 30%;
     align-items: center;
     justify-content: space-between;
+}
+
+.toggle_btn {
+    font-size: 1.5rem;
+    cursor: pointer;
+    display: none;
 }
 
 .img-container {
@@ -73,9 +90,72 @@ body {
     margin-right: 15px;
 }
 
-.img-container img{
+.img-container img {
     width: 80%;
     height: 85%;
+}
+
+.drop_down {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    align-items: center;
+    overflow: hidden;
+    width: 300px;
+    height: 100vh;
+    background-color: #ffffff;
+    right: 2.5rem;
+    top: 0px;
+    border-left: 1px solid lightgray;
+    border-radius: 10px;
+    margin-right: -400px;
+    z-index: 1000;
+    transition: margin 0.2s ease-in;
+}
+
+.drop_down ul {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    padding: 20px;
+    z-index: 10;
+}
+
+.drop_down ul a {
+    text-decoration: none;
+    color: #000000;
+    font-size: 24px;
+    font-weight: bold;
+    z-index: 10;
+}
+
+.drop_down_header {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-sizing: border-box;
+}
+
+.drop_down_header img {
+    width: 50px;
+    height: 100%;
+    margin-left: 10px;
+}
+
+.drop_down a {
+    font-size: 30px;
+    padding: 10px;
+}
+
+.open {
+    margin-right: 0px;
+}
+
+.close{
+    margin-right: -400px;
 }
 
 .hero-section {
@@ -200,7 +280,7 @@ body {
     font-weight: 500;
 }
 
-.btn:hover{
+.btn:hover {
     cursor: pointer;
 }
 
@@ -216,7 +296,7 @@ body {
     background-color: #DC582A;
 }
 
-.filters{
+.filters {
     width: 20%;
     height: 70vh;
     display: flex;
@@ -227,14 +307,14 @@ body {
     box-sizing: border-box;
 }
 
-.recepi{
+.recepi {
     display: flex;
     margin-top: 20px;
     width: 95%;
     margin-inline: auto;
 }
 
-.card-container{
+.card-container {
     width: 80%;
     height: 70vh;
     display: flex;
@@ -244,13 +324,13 @@ body {
     gap: 20px;
 }
 
-label{
+label {
     color: #253D4E;
     font-family: 'Inter', sans-serif;
     font-size: 14px;
 }
 
-.card{
+.card {
     width: 315px;
     height: 315px;
     padding: 10px;
@@ -260,11 +340,11 @@ label{
     box-shadow: 0px 3px 8px -1px rgba(50, 50, 71, 0.05), 0px 0px 1px 0px rgba(12, 26, 75, 0.24);
 }
 
-.card:hover{
-scale: 1.02;
+.card:hover {
+    scale: 1.02;
 }
 
-.card-img{
+.card-img {
     width: 90%;
     height: 60%;
     display: flex;
@@ -282,7 +362,7 @@ scale: 1.02;
 
 
 
-.card-text{
+.card-text {
     width: 90%;
     display: flex;
     justify-content: space-between;
@@ -294,17 +374,17 @@ scale: 1.02;
     margin: 0;
 }
 
-.stars{
+.stars {
     display: flex;
     align-items: center;
 }
 
-.liked-comments{
+.liked-comments {
     display: flex;
     gap: 10px;
 }
 
-.time-required{
+.time-required {
     width: 90%;
     display: flex;
     margin-inline: auto;
@@ -313,7 +393,7 @@ scale: 1.02;
     margin-top: 10px;
 }
 
-.category{
+.category {
     margin: 0;
     display: flex;
     width: 80px;
@@ -328,19 +408,92 @@ scale: 1.02;
     font-size: 14px;
 }
 
-.liked:hover{
+.liked:hover {
     cursor: pointer;
 }
 
-.time{
+.time {
     color: #DC582A;
 }
 
-.veg{
+.veg {
     background-color: #C4D600;
     width: 50px;
 }
 
-.non-veg{
+.non-veg {
     background-color: #DC582A;
+}
+
+/* Responsive design */
+@media only screen and (max-width: 992px) {
+
+    .header{
+        justify-content: space-between;
+    }
+    .header-tags>ul,
+    .img-container {
+        display: none;
+    }
+
+    .toggle_btn {
+        display: flex;
+    }
+
+    .header-tags {
+        width: 200px;
+        justify-content: flex-end;
+    }
+
+    .hero-label{
+        width: 150px;
+        height: 70px;
+        margin-left: 30px;
+    }
+
+    .hero-label p{
+        font-size: 10px;
+    }
+    .hero-label h1{
+        font-size: 12px;
+    }
+
+    .hero-section-img{
+        height: 30%;
+    }
+
+    .open{
+        margin-right: -50px;
+    }
+
+    .hero-section{
+        height: 50%;
+    }
+
+    .filters{
+        display: none;
+    }
+    #mobile-view{
+        display: flex;
+        width: 100%;
+    }
+
+    .card{
+        width: 250px;
+    }
+    .card-container{
+        margin-inline: auto;
+        width: 95%;
+    }
+    .button-section{
+        width: 95%;
+        height: 50px;
+        gap: 5px;
+    }
+
+    .btn{
+        font-size: 8px;
+        padding: 5px;
+    }
+    
 }
