--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,7 @@ a:hover {
     height: 100vh;
     background-color: #ffffff;
     right: 2.5rem;
-    top: 0px;
+    top: 50px;
     border-left: 1px solid lightgray;
     border-radius: 10px;
     margin-right: -400px;
@@ -480,6 +480,7 @@ label {
 
     .card{
         width: 250px;
+        margin-inline: auto;
     }
     .card-container{
         margin-inline: auto;
